--- a/project/src/App.scss
+++ b/project/src/App.scss
@@ -1,3 +1,13 @@
+body {
+  background-color: #f5f5f5;
+}
+
+form {
+  .MuiFormControl-root {
+    margin-bottom: 10px;
+  }
+}
+
 .App {
   text-align: center;
 }
